--- a/css/style.css
+++ b/css/style.css
@@ -427,39 +427,24 @@ main.design .device-container {
 
 /*contact*/
 /*Project*/
-html,
-body,
-header,
-.view {
+.modal-body .view {
   height: 100%;
 }
 
 @media (max-width: 559px) {
-
-  html,
-  body,
-  header,
-  .view {
+  .modal-body .view {
     height: 1000px;
   }
 }
 
 @media (min-width: 560px) and (max-width: 740px) {
-
-  html,
-  body,
-  header,
-  .view {
+  .modal-body .view {
     height: 700px;
   }
 }
 
 @media (min-width: 800px) and (max-width: 850px) {
-
-  html,
-  body,
-  header,
-  .view {
+  .modal-body .view {
     height: 600px;
   }
 }
