--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ main.design .device-container {
 }
 
 .btn-close-modal {
-  color: white;
+  color: #0097a7;
   border: 2px solid;
   border-radius: 80px;
   font-family: 'Sen', sans-serif;
@@ -244,7 +244,7 @@ main.design .device-container {
 }
 
 .btn-close-modal:hover, .btn-close-modal:focus, .btn-close-modal:active, .btn-close-modal.active {
-  color: #0097a7;
+  color: white;
   border-color: white;
   background-color: #0097a7;
 }
@@ -444,8 +444,39 @@ main.design .device-container {
 
 /*contact*/
 /*Project*/
-#time-counter {
+.countdown {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.countdown span {
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   font-size: 5rem;
+  margin-left: 0.8rem;
+}
+
+.countdown span:first-of-type {
+  margin-left: 0;
+}
+
+.countdown-circles {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.countdown-circles span {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.countdown-circles span:first-of-type {
+  margin-left: 0;
 }
 
 /*Project*/
