--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ main.design .device-container {
 /*Main Background*/
 /*Preloader*/
 .preloader {
-  background-color: #f7f7f7;
+  background-color: rgba(0, 188, 212, 0.3);
   width: 100%;
   height: 100%;
   position: fixed;
@@ -189,6 +189,7 @@ main.design .device-container {
   text-align: center;
   display: inline-block;
   -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   padding-top: 6px;
@@ -198,49 +199,13 @@ main.design .device-container {
 }
 
 .preloader .preloader-img img {
-  max-width: 55px
+  max-width: 80px
 }
 
 .preloader .pere-text strong {
   font-weight: 800;
   color: #dca73a;
   text-transform: uppercase
-}
-
-@-webkit-keyframes zoom {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .6s;
-    -o-transition: .6s;
-    transition: .6s
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-    -webkit-transition: .6s;
-    -o-transition: .6s;
-    transition: .6s
-  }
-}
-
-@keyframes zoom {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .6s;
-    -o-transition: .6s;
-    transition: .6s
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-    -webkit-transition: .6s;
-    -o-transition: .6s;
-    transition: .6s
-  }
 }
 
 /*Preloader*/
