--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ main.design .device-container {
 /*Main Background*/
 /*Preloader*/
 .preloader {
-  background-color: rgba(0, 188, 212, 0.3);
+  background-color: #4dd0e1;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -167,7 +167,7 @@ main.design .device-container {
   border-radius: 50%;
   -webkit-box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
   box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
-  background-color: #ffffff;
+  background-color: #4dd0e1;
   -webkit-animation: zoom 2000ms infinite ease;
   animation: zoom 2000ms infinite ease;
   -webkit-transition: .6s;
@@ -200,12 +200,6 @@ main.design .device-container {
 
 .preloader .preloader-img img {
   max-width: 80px
-}
-
-.preloader .pere-text strong {
-  font-weight: 800;
-  color: #dca73a;
-  text-transform: uppercase
 }
 
 /*Preloader*/
