--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ main.design .device-container {
 /*Main Background*/
 /*Preloader*/
 .preloader {
-  background-color: #4dd0e1;
+  background-color: #f7f7f7;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -167,7 +167,7 @@ main.design .device-container {
   border-radius: 50%;
   -webkit-box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
   box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
-  background-color: #4dd0e1;
+  background-color: #ffffff;
   -webkit-animation: zoom 2000ms infinite ease;
   animation: zoom 2000ms infinite ease;
   -webkit-transition: .6s;
@@ -189,7 +189,6 @@ main.design .device-container {
   text-align: center;
   display: inline-block;
   -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   padding-top: 6px;
