--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ main.design .device-container {
 /*Main Background*/
 /*Preloader*/
 .preloader {
-  background-color: #f7f7f7;
+  background-color: #212121;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -167,7 +167,7 @@ main.design .device-container {
   border-radius: 50%;
   -webkit-box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
   box-shadow: 0 1px 5px 0 rgba(35, 181, 185, 0.15);
-  background-color: #ffffff;
+  background-color: #2E2E2E;
   -webkit-animation: zoom 2000ms infinite ease;
   animation: zoom 2000ms infinite ease;
   -webkit-transition: .6s;
