--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ main.design .device-container {
 .spin {
   -webkit-animation: spin 4s linear infinite;
   -moz-animation: spin 4s linear infinite;
-  animation: spin 4s linear infinite;
+  animation: spin .1s linear infinite;
 }
 
 @-moz-keyframes spin {
