setting preloader in all views

--- a/css/style.css
+++ b/css/style.css
@@ -237,10 +237,10 @@ main.design .device-container {
   }
 }
 
-.spin {
-  -webkit-animation: spin 4s linear infinite;
-  -moz-animation: spin 4s linear infinite;
-  animation: spin .1s linear infinite;
+.spin-loader {
+  -webkit-animation: spin 2s linear infinite;
+  -moz-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
 }
 
 @-moz-keyframes spin {
@@ -258,7 +258,7 @@ main.design .device-container {
 @keyframes spin {
   100% {
     -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+    transform: rotate(-360deg);
   }
 }
 
