--- a/css/style.css
+++ b/css/style.css
@@ -238,9 +238,11 @@ main.design .device-container {
 }
 
 .spin-loader {
-  -webkit-animation: spin 2s linear infinite;
-  -moz-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
+  -webkit-animation: spin 3s linear infinite;
+  -moz-animation: spin 3s linear infinite;
+  -ms-animation: spin 3s linear infinite;
+  -o-animation: spin 3s linear infinite;
+  animation: spin 3s linear infinite;
 }
 
 @-moz-keyframes spin {
