restyle form contact in contact.html view

--- a/css/style.css
+++ b/css/style.css
@@ -561,7 +561,7 @@ main.design .device-container {
   border-top: 0;
 }
 
-.card-login .card-header {
+.card-contact .card-header {
   margin-left: 20px;
   margin-right: 20px;
   margin-top: -40px;
